persona saving, video inserted

--- a/Prot 1 func/avaria.html
+++ b/Prot 1 func/avaria.html
@@ -54,10 +54,10 @@
 						<div class="col-md-4 padding2">
 							<ul class="nav nav-pills nav-stacked nav-fixed-left text-left">
 								<li class="noact width">
-									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
+									<blockquote class=" side mainicon glyphicon" style="height: 60px"></blockquote>
 								</li>
 								<li class="noact width">
-									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
+									<blockquote class=" side mainicon glyphicon" style="height: 60px"></blockquote>
 								</li>
 								<li class="noact width">
 									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
