--- a/Prot 1 func/avpersona.html
+++ b/Prot 1 func/avpersona.html
@@ -10,6 +10,7 @@
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/keypress-2.0.1.min.js"></script>
 	<script src="js/navbar.js"></script>
+	<script> sessionStorage.areaPersona = "parts" </script>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +44,7 @@
 						    	<li class="left-menu" data-msg="Avarias" data-help="Consulte as várias informações relativas a avarias do seu veículo" data-txt=" <div class='mainimage' style='background-image: url(./imgs/icons/car-tire.png)'></div>">
 						    		<a class="nav-button" href="avarias.html"><span class="mainicon glyphicon glyphicon-warning-sign"></span></a>
 						    	</li >
-							    <li class="left-menu usestore3" data-msg="Personalização" data-help="Personalize os vários constituintes do seu carro a gosto">
+							    <li class="left-menu usestore-persona" data-msg="Personalização" data-help="Personalize os vários constituintes do seu carro a gosto">
 							    	<a class="nav-button" href="persona.html"><span class="mainicon glyphicon glyphicon-wrench"></span></a>
 							    </li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
