--- a/Prot 1 func/conforto.html
+++ b/Prot 1 func/conforto.html
@@ -10,6 +10,7 @@
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/keypress-2.0.1.min.js"></script>
 	<script src="js/navbar.js"></script>
+	<script> sessionStorage.areaPersona = "confort" </script>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -40,10 +41,10 @@
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 	  						<nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-						    	<li class="left-menu usestore3" data-msg="Assentos" data-help="Ajuste o número de assentos e ainda o seu material" data-txt="">
+						    	<li class="left-menu usestore-persona" data-msg="Assentos" data-help="Ajuste o número de assentos e ainda o seu material" data-txt="">
 						    		<a class="nav-button" href="seats.html"><div class="icon" style="background-image: url(./imgs/icons/seats.png)"></div></a>
 						    	</li >
-							    <li class="left-menu usestore3" data-msg="Vidros" data-help="Ajuste a cor e transparência dos vidros do seu veículo" data-txt="">
+							    <li class="left-menu usestore-persona" data-msg="Vidros" data-help="Ajuste a cor e transparência dos vidros do seu veículo" data-txt="">
 							    	<a class="nav-button" href="glass.html"><div class="icon" style="background-image: url(./imgs/icons/glass.png)"></div></a>
 							    </li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
