--- a/Prot 1 func/fabrics.html
+++ b/Prot 1 func/fabrics.html
@@ -42,16 +42,16 @@
 			  				<div id="top-arrow" class="arrows"><span class="glyphicon glyphicon-chevron-up scrollicon"></span></div>
 			  				<div class="roll-scroll">
 		  						<nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-							    	<li class="left-menu usestore3 store" data-msg="Sintéctico" data-help="Altere o material dos seus assentos para tecido sintéctico, opção por defeito" data-txt="">
+							    	<li class="left-menu store-persona" data-msg="Sintéctico" data-help="Altere o material dos seus assentos para tecido sintéctico, opção por defeito" data-txt="#seat-fabric">
 							    		<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/synthetic.jpg)"></div></a>
 							    	</li >
-								    <li class="left-menu usestore3 store" data-msg="Kevlar" data-help="Altere o material dos seus assentos para tecido kevlar"  data-txt="">
+								    <li class="left-menu store-persona" data-msg="Kevlar" data-help="Altere o material dos seus assentos para tecido kevlar"  data-txt="#seat-fabric">
 								    	<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/kevlar.png)"></div></a>
 								    </li>
-									<li class="left-menu usestore3 store" data-msg="Chewbacca" data-help="Altere o material dos seus assentos para pêlo de Chewbacca"  data-txt="">
+									<li class="left-menu store-persona" data-msg="Chewbacca" data-help="Altere o material dos seus assentos para pêlo de Chewbacca"  data-txt="#seat-fabric">
 								    	<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/chewbacca.png)"></div></a>
 								    </li>
-								    <li class="left-menu usestore3 store" data-msg="Couro" data-help="Altere o material dos seus assentos para couro"  data-txt="">
+								    <li class="left-menu store-persona" data-msg="Couro" data-help="Altere o material dos seus assentos para couro"  data-txt="#seat-fabric">
 								    	<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/leather.png)"></div></a>
 								    </li>
 									<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="" style="opacity: 0; height: 0px">
