--- a/Prot 1 func/glass.html
+++ b/Prot 1 func/glass.html
@@ -40,10 +40,10 @@
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 	  						<nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-						    	<li class="left-menu usestore3" data-msg="Transparência" data-help="Ajuste a transparência do vidro" data-txt="">
+						    	<li class="left-menu usestore-persona" data-msg="Transparência" data-help="Ajuste a transparência do vidro" data-txt="">
 						    		<a class="nav-button" href="transparency.html"><span class="mainicon glyphicon glyphicon-certificate"></span></a>
 						    	</li >
-							    <li class="left-menu usestore3" data-msg="Cor" data-help="Ajuste a cor do vidro"  data-txt="">
+							    <li class="left-menu usestore-persona" data-msg="Cor" data-help="Ajuste a cor do vidro"  data-txt="">
 							    	<a class="nav-button" href="color.html"><span class="mainicon glyphicon glyphicon-tint"></span></a>
 							    </li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
