--- a/Prot 1 func/motors.html
+++ b/Prot 1 func/motors.html
@@ -40,13 +40,13 @@
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 	  						<nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-						    	<li class="left-menu usestore3 store" data-msg="Motor normal" data-help="Motor comum de automóvel, opção por defeito" data-txt="">
-						    		<a class="nav-button usestore3" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/motor.png)"></div></a>
+						    	<li class="left-menu store-persona" data-msg="Normal" data-help="Motor comum de automóvel, opção por defeito" data-txt="#motor">
+						    		<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/motor.png)"></div></a>
 						    	</li >
-							    <li class="left-menu usestore3 store" data-msg="Jacto" data-help="Motor a jacto" data-txt="">
+							    <li class="left-menu store-persona" data-msg="Jacto" data-help="Motor a jacto" data-txt="#motor">
 							    	<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/jet.png)"></div></a>
 							    </li>
-								<li class="left-menu usestore3 store" data-msg="Warp drive" data-help="Motor warp drive, útil para viagens inter-galácticas" data-txt="">
+								<li class="left-menu store-persona" data-msg="Warp drive" data-help="Motor warp drive, útil para viagens inter-galácticas" data-txt="#motor">
 									<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/warpdrive.png)"></div></a>
 								</li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
