--- a/Prot 1 func/number.html
+++ b/Prot 1 func/number.html
@@ -42,31 +42,31 @@
 		  					<div id="top-arrow" class="arrows"><span class="glyphicon glyphicon-chevron-up scrollicon"></span></div>
 		  					<div class="roll-scroll">
 		  						<nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-		  							<li class="left-menu usestore3 store" data-msg="Assentos 0/8" data-help="Conduza sem assento!" data-txt="">
+		  							<li class="left-menu store-persona" data-msg="0/8" data-help="Conduza sem assento!" data-txt="#seat-number">
 							    		<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/seat.png)"><span class="iconnum" style="margin-left: 50px">0</span></div></a>
 							    	</li >
-		  							<li class="left-menu usestore3 store" data-msg="Assentos 1/8" data-help="Ajuste o número de assentos do seu veículo para 1 no total" data-txt="">
+		  							<li class="left-menu store-persona" data-msg="1/8" data-help="Ajuste o número de assentos do seu veículo para 1 no total" data-txt="#seat-number">
 							    		<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/seat.png)"><span class="iconnum" style="margin-left: 50px">1</span></div></a>
 							    	</li >
-							    	<li class="left-menu usestore3 store" data-msg="Assentos 2/8" data-help="Ajuste o número de assentos do seu veículo para 2 no total" data-txt="">
+							    	<li class="left-menu store-persona" data-msg="2/8" data-help="Ajuste o número de assentos do seu veículo para 2 no total" data-txt="#seat-number">
 							    		<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/seat.png)"><span class="iconnum" style="margin-left: 50px">2</span></div></a>
 							    	</li >
-							    	<li class="left-menu usestore3 store" data-msg="Assentos 3/8" data-help="Ajuste o número de assentos do seu veículo para 3 no total" data-txt="">
+							    	<li class="left-menu store-persona" data-msg="3/8" data-help="Ajuste o número de assentos do seu veículo para 3 no total" data-txt="#seat-number">
 							    		<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/seat.png)"><span class="iconnum" style="margin-left: 50px">3</span></div></a>
 							    	</li >
-							    	<li class="left-menu usestore3 store" data-msg="Assentos 4/8" data-help="Ajuste o número de assentos do seu veículo para 4 no total, opção por defeito" data-txt="" style="opacity: 0; height: 0px">
+							    	<li class="left-menu store-persona" data-msg="4/8" data-help="Ajuste o número de assentos do seu veículo para 4 no total, opção por defeito" data-txt="#seat-number" style="opacity: 0; height: 0px">
 							    		<a id="bottom-elem" class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/seat.png)"><span class="iconnum" style="margin-left: 50px">4</span></div></a>
 							    	</li >
-							    	<li class="left-menu usestore3 store" data-msg="Assentos 5/8" data-help="Ajuste o número de assentos do seu veículo para 5 no total" data-txt="" style="opacity: 0; height: 0px">
+							    	<li class="left-menu store-persona" data-msg="5/8" data-help="Ajuste o número de assentos do seu veículo para 5 no total" data-txt="#seat-number" style="opacity: 0; height: 0px">
 							    		<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/seat.png)"><span class="iconnum" style="margin-left: 50px">5</span></div></a>
 							    	</li >
-							    	<li class="left-menu usestore3 store" data-msg="Assentos 6/8" data-help="Ajuste o número de assentos do seu veículo para 6 no total" data-txt="" style="opacity: 0; height: 0px">
+							    	<li class="left-menu store-persona" data-msg="6/8" data-help="Ajuste o número de assentos do seu veículo para 6 no total" data-txt="#seat-number" style="opacity: 0; height: 0px">
 							    		<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/seat.png)"><span class="iconnum" style="margin-left: 50px">6</span></div></a>
 							    	</li >
-							    	<li class="left-menu usestore3 store" data-msg="Assentos 7/8" data-help="Ajuste o número de assentos do seu veículo para 7 no total" data-txt="" style="opacity: 0; height: 0px">
+							    	<li class="left-menu store-persona" data-msg="7/8" data-help="Ajuste o número de assentos do seu veículo para 7 no total" data-txt="#seat-number" style="opacity: 0; height: 0px">
 							    		<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/seat.png)"><span class="iconnum" style="margin-left: 50px">7</span></div></a>
 							    	</li >
-							    	<li class="left-menu usestore3 store" data-msg="Assentos 8/8" data-help="Ajuste o número de assentos do seu veículo para 8 no total" data-txt="" style="opacity: 0; height: 0px">
+							    	<li class="left-menu store-persona" data-msg="8/8" data-help="Ajuste o número de assentos do seu veículo para 8 no total" data-txt="#seat-number" style="opacity: 0; height: 0px">
 							    		<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/seat.png)"><span class="iconnum" style="margin-left: 50px">8</span></div></a>
 							    	</li >
 									<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="" style="opacity: 0; height: 0px">
