--- a/Prot 1 func/performance.html
+++ b/Prot 1 func/performance.html
@@ -10,7 +10,7 @@
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/keypress-2.0.1.min.js"></script>
 	<script src="js/navbar.js"></script>
-
+	<script> sessionStorage.areaPersona = "performance" </script>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -40,10 +40,10 @@
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 	  						<nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-						    	<li class="left-menu usestore3" data-msg="Motor" data-help="Escolha o tipo de motor" data-txt="">
+						    	<li class="left-menu usestore-persona" data-msg="Motor" data-help="Escolha o tipo de motor" data-txt="">
 						    		<a class="nav-button" href="motors.html"><div class="icon" style="background-image: url(./imgs/icons/motor.png)"></div></a>
 						    	</li >
-							    <li class="left-menu usestore3" data-msg="Suspensão" data-help="Ajuste a altura da sua suspensão" data-txt="">
+							    <li class="left-menu usestore-persona" data-msg="Suspensão" data-help="Ajuste a altura da sua suspensão" data-txt="">
 							    	<a class="nav-button" href="suspension.html"><div class="icon" style="background-image: url(./imgs/icons/suspension.png)"></div></a>
 							    </li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
