--- a/Prot 1 func/persona.html
+++ b/Prot 1 func/persona.html
@@ -10,6 +10,7 @@
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/keypress-2.0.1.min.js"></script>
 	<script src="js/navbar.js"></script>
+	<script> sessionStorage.areaPersona = "parts" </script>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -42,22 +43,22 @@
 		  					<div id="top-arrow" class="arrows"><span class="glyphicon glyphicon-chevron-up scrollicon"></span></div>
 		  					<div class="roll-scroll">
 		  						<nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-							    	<li class="left-menu usestore3" data-msg="Favoritos" data-help="Consulte as várias configurações definidas por si" data-txt="">
+							    	<li class="left-menu usestore-persona" data-msg="Favoritos" data-help="Consulte as várias configurações definidas por si" data-txt="">
 							    		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-star"></span></a>
 							    	</li >
-								    <li class="left-menu usestore3" data-msg="Conforto" data-help="Personalize os vários constituintes relaccionados com conforto (ajuste dos bancos, estofos, etc.)" data-txt="">
+								    <li class="left-menu usestore-persona" data-msg="Conforto" data-help="Personalize os vários constituintes relaccionados com conforto (ajuste dos bancos, estofos, etc.)" data-txt="">
 								    	<a class="nav-button" href="conforto.html"><div class="icon" style="background-image: url(./imgs/icons/seat.png)"></div></a>
 								    </li>
-								    <li class="left-menu usestore3" data-msg="Performance" data-help="Personalize os vários constituintes relaccionados com a performance do seu veículo (motor, suspensão, direcção, etc.)" data-txt="">
+								    <li class="left-menu usestore-persona" data-msg="Performance" data-help="Personalize os vários constituintes relaccionados com a performance do seu veículo (motor, suspensão, direcção, etc.)" data-txt="">
 								    	<a class="nav-button" href="performance.html"><div class="icon" style="background-image: url(./imgs/icons/performance2.png)"></div></a>
 								    </li>
-								    <li class="left-menu usestore3" data-msg="Guardar alterações" data-help="Guardar as alterações até agora efectuadas no seu carro" data-txt="Cenas até agora alteradas">
+								    <li class="left-menu usestore-persona" data-msg="Guardar alterações" data-help="Guardar as alterações até agora efectuadas no seu carro" data-txt="Cenas até agora alteradas">
 							    		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-floppy-disk"></span></a>
 							    	</li >
-							    	<li class="left-menu usestore3" data-msg="Descartar alterações" data-help="Descartar as alterações até agora efectuadas no seu carro" data-txt="Cenas até agora alteradas" style="opacity: 0; height: 0px">
+							    	<li class="left-menu usestore-persona" data-msg="Descartar alterações" data-help="Descartar as alterações até agora efectuadas no seu carro" data-txt="Cenas até agora alteradas" style="opacity: 0; height: 0px">
 							    		<a id="bottom-elem" class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-trash"></span></a>
 							    	</li >
-							    	<li class="left-menu usestore3" data-msg="Definições de fábrica" data-help="Restaurar os vários constituintes activos por defeito" data-txt="Definições de fábrica" style="opacity: 0; height: 0px">
+							    	<li class="left-menu usestore-persona" data-msg="Definições de fábrica" data-help="Restaurar os vários constituintes activos por defeito" data-txt="Definições de fábrica" style="opacity: 0; height: 0px">
 							    		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-repeat"></span></a>
 							    	</li >
 									<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="" style="opacity: 0; height: 0px">
