--- a/Prot 1 func/seats.html
+++ b/Prot 1 func/seats.html
@@ -40,10 +40,10 @@
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 	  						<nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-						    	<li class="left-menu usestore3" data-msg="Número" data-help="Ajuste o número de assentos do seu veículo" data-txt="">
+						    	<li class="left-menu usestore-persona" data-msg="Número" data-help="Ajuste o número de assentos do seu veículo" data-txt="">
 						    		<a class="nav-button" href="number.html"><div class="icon" style="background-image: url(./imgs/icons/seat.png)"><span class="iconnum" style="margin-left: 50px">0..8</span></div></a>
 						    	</li >
-							    <li class="left-menu usestore3" data-msg="Material" data-help="Ajuste o material dos seus assentos"  data-txt="">
+							    <li class="left-menu usestore-persona" data-msg="Material" data-help="Ajuste o material dos seus assentos"  data-txt="">
 							    	<a class="nav-button" href="fabrics.html"><div class="icon" style="background-image: url(./imgs/icons/fabrics.png)"></div></a>
 							    </li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
