--- a/Prot 1 func/color.html
+++ b/Prot 1 func/color.html
@@ -42,19 +42,19 @@
 		  					<div id="top-arrow" class="arrows"><span class="glyphicon glyphicon-chevron-up scrollicon"></span></div>
 		  					<div class="roll-scroll">
 		  						<nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-							    	<li class="left-menu usestore3 store" data-msg="Incolor" data-help="Opçao por defeito" data-txt="">
+							    	<li class="left-menu store-persona" data-msg="Incolor" data-help="Opçao por defeito" data-txt="#glass-color">
 							    		<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/glass.png)"></div></a>
 							    	</li >
-								    <li class="left-menu usestore3 store" data-msg="Verde" data-help="Vidro de cor verde"  data-txt="">
+								    <li class="left-menu store-persona" data-msg="Verde" data-help="Vidro de cor verde"  data-txt="#glass-color">
 								    	<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/greenglass.png)"></div></a>
 								    </li>
-								    <li class="left-menu usestore3 store" data-msg="Azul" data-help="Vidro de cor azul" data-txt="">
+								    <li class="left-menu store-persona" data-msg="Azul" data-help="Vidro de cor azul" data-txt="#glass-color">
 							    		<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/blueglass.png)"></div></a>
 							    	</li >
-								    <li class="left-menu usestore3 store" data-msg="Vermelho" data-help="Vidro de cor vermelha"  data-txt="">
+								    <li class="left-menu store-persona" data-msg="Vermelho" data-help="Vidro de cor vermelha"  data-txt="#glass-color">
 								    	<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/redglass.png)"></div></a>
 								    </li>
-								    <li class="left-menu usestore3 store" data-msg="Amarelo" data-help="Vidro de cor amarela"  data-txt="" style="opacity: 0; height: 0px">
+								    <li class="left-menu store-persona" data-msg="Amarelo" data-help="Vidro de cor amarela"  data-txt="#glass-color" style="opacity: 0; height: 0px">
 								    	<a id="bottom-elem" class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/yellowglass.png)"></div></a>
 								    </li>
 									<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="" style="opacity: 0; height: 0px">
