--- a/Prot 1 func/galeria.html
+++ b/Prot 1 func/galeria.html
@@ -49,6 +49,9 @@
 							  	<li class="left-menu store" data-msg="Foto 3" data-help="Seleccionar imagem / vídeo para mais opções.<br>Data: 10/02/2230" data-txt="<img class='img' src='./imgs/cam/gal/pic3.jpg'>">
 							  		<a class="nav-button" href="#"><div class="icon" style="background-image: url(./imgs/cam/gal/pic3.jpg)"></div></a>
 							  	</li>
+							  	<li class="left-menu store" data-msg="Foto 3" data-help="Seleccionar imagem / vídeo para mais opções.<br>Data: 10/02/2230" data-txt="<video width='320' height='240' controls><source src='./videos/kid.mp4' type='video/mp4'>Your browser does not support the video tag.</video>">
+							  		<a class="nav-button" href="#"><div class="icon" style="background-image: url(./imgs/cam/gal/pic3.jpg)"></div></a>
+							  	</li>
 							  	<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
 									<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
 								</li>
