--- a/Prot 1 func/suspension.html
+++ b/Prot 1 func/suspension.html
@@ -40,13 +40,13 @@
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 	  						<nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-						    	<li class="left-menu usestore3 store" data-msg="Rebaixado" data-help="Altere a sua suspensão para uma suspensão baixa" data-txt="#suspension">
+						    	<li class="left-menu store-persona" data-msg="Rebaixado" data-help="Altere a sua suspensão para uma suspensão baixa" data-txt="#suspension">
 						    		<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/tinyspring.png)"></div></a>
 						    	</li >
-							    <li class="left-menu usestore3 store" data-msg="Normal" data-help="Altere a sua suspensão para uma suspensão normal, opção por defeito" data-txt="#suspension">
+							    <li class="left-menu store-persona" data-msg="Normal" data-help="Altere a sua suspensão para uma suspensão normal, opção por defeito" data-txt="#suspension">
 							    	<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/normalspring.png)"></div></a>
 							    </li>
-								<li class="left-menu usestore3 store" data-msg="Alta" data-help="Altere a sua suspensão para uma suspensão alta" data-txt="#suspension">
+								<li class="left-menu store-persona" data-msg="Alta" data-help="Altere a sua suspensão para uma suspensão alta" data-txt="#suspension">
 									<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/bigspring.png)"></div></a>
 								</li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
