--- a/Prot 1 func/transparency.html
+++ b/Prot 1 func/transparency.html
@@ -40,16 +40,16 @@
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 	  						<nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-						    	<li class="left-menu store usestore3" data-msg="Transparente" data-help="Transparência máxima" data-txt="">
+						    	<li class="left-menu store-persona" data-msg="Transparente" data-help="Transparência máxima" data-txt="#glass-transparency">
 						    		<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/whiteglass.png)"></div></a>
 						    	</li >
-							    <li class="left-menu store usestore3" data-msg="Transparência normal" data-help="Transparência média - opção por defeito"  data-txt="">
+							    <li class="left-menu store-persona" data-msg="Transparência normal" data-help="Transparência média - opção por defeito"  data-txt="#glass-transparency">
 							    	<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/glass.png)"></div></a>
 							    </li>
-							    <li class="left-menu store usestore3" data-msg="Vidro fumado" data-help="Equivalente a um vidro semi-opaco" data-txt="">
+							    <li class="left-menu store-persona" data-msg="Vidro fumado" data-help="Equivalente a um vidro semi-opaco" data-txt="#glass-transparency">
 						    		<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/blackglass.png)"></div></a>
 						    	</li >
-							    <li class="left-menu store usestore3" data-msg="Opaco" data-help="Vidro completamente opaco"  data-txt="">
+							    <li class="left-menu store-persona" data-msg="Opaco" data-help="Vidro completamente opaco"  data-txt="#glass-transparency">
 							    	<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/allblackglass.png)"></div></a>
 							    </li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
