save persona + video + minor bugs

--- a/Prot 1 func/agree.html
+++ b/Prot 1 func/agree.html
@@ -34,23 +34,23 @@
 		  			</div>
 		  			<div class="row top-buffer">
 		  				<div class="col-md-1 box" id="tittle">
-			  				<h3 class= "width act maintext" id="headerfunc">Tem a certeza?</h3>
+			  				<h3 class= "width act maintext" id="headerfunc"></h3>
 			  			</div>
 		  			</div>
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-						    	<li id="sim"><a class="active" href="avisos.html"><h4>Sim</h4></a></li>
-							    <li id="nao"><a class="active" href="convites.html"><h4>Não</h4></a></li>
+						    	<li class="left-menu" id="sim"><a class="nav-button"><h4>Sim</h4></a></li>
+							    <li class="left-menu" id="nao"><a class="nav-button"><h4>Não</h4></a></li>
 						    </nav>
 						</div>
 						<div class="col-md-4 padding2">
 							<ul class="nav nav-pills nav-stacked nav-fixed-left text-left">
-								<li class="">
+								<li class="noact width">
 									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
 								</li>
-								<li class="">
-									<blockquote class=" side mainicon glyphicon glyphicon-remove-circle"></blockquote>
+								<li class="noact width">
+									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
 								</li>
 							</ul>
 						</div>
@@ -59,7 +59,7 @@
 		  		<div class="col-md-9">
 		  			<div class="row">
 		  				<div class="col-md-5 col-md-offset-1 box smallpadding" id="helper">
-		  					<h4 class="maintext width act" id="helperfunc">Prima o botão respectivo do volante para seleccionar a opção que desejar</h4>
+		  					<h4 class="maintext width act" id="helperfunc">Seleccione a opção de confirmação desejada</h4>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer-main">
