--- a/Prot 1 func/avaria.html
+++ b/Prot 1 func/avaria.html
@@ -29,7 +29,7 @@
 		  		<div class="col-md-3">
 		  			<div class="row">
 		  				<div class="col-md-12 box" id="maintittle">
-		  					<h1 class= "width act maintext">Personalização e Avarias<br> <small>Avarias</small></h1>
+		  					<h1 class= "width act maintext">Avarias<br> <small>Avaria</small></h1>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer">
@@ -41,10 +41,10 @@
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
 						    	<li class="left-menu usestore" data-msg="Descrição" data-help="Consulte uma descrição detalhada da avaria">
-						    		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-info-sign"></span></a>
+						    		<a class="nav-button"><span class="mainicon glyphicon glyphicon-info-sign"></span></a>
 						    	</li >
 							    <li class="left-menu usestore2" data-msg="Sugestão" data-help="Consulte a sugestão de reparação apresentada para a avaria em causa">
-							    	<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-question-sign"></span></a>
+							    	<a class="nav-button"><span class="mainicon glyphicon glyphicon-question-sign"></span></a>
 							    </li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
 									<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
