--- a/Prot 1 func/fabrics.html
+++ b/Prot 1 func/fabrics.html
@@ -29,7 +29,7 @@
 		  		<div class="col-md-3">
 		  			<div class="row">
 		  				<div class="col-md-12 box" id="maintittle">
-		  					<h1 class= "width act maintext">Personalização <small>Assentos</small></h1>
+		  					<h1 class= "width act maintext">Personalização <small>Assentos - Material</small></h1>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer">
@@ -42,17 +42,17 @@
 			  				<div id="top-arrow" class="arrows"><span class="glyphicon glyphicon-chevron-up scrollicon"></span></div>
 			  				<div class="roll-scroll">
 		  						<nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-							    	<li class="left-menu store-persona" data-msg="Sintéctico" data-help="Altere o material dos seus assentos para tecido sintéctico, opção por defeito" data-txt="#seat-fabric">
-							    		<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/synthetic.jpg)"></div></a>
+							    	<li class="left-menu store-persona persona" data-msg="Sintéctico" data-help="Altere o material dos seus assentos para tecido sintéctico, opção por defeito" data-txt="#seat-fabric">
+							    		<a class="nav-button"><div class="icon" style="background-image: url(./imgs/icons/synthetic.jpg)"></div></a>
 							    	</li >
-								    <li class="left-menu store-persona" data-msg="Kevlar" data-help="Altere o material dos seus assentos para tecido kevlar"  data-txt="#seat-fabric">
-								    	<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/kevlar.png)"></div></a>
+								    <li class="left-menu store-persona persona" data-msg="Kevlar" data-help="Altere o material dos seus assentos para tecido kevlar"  data-txt="#seat-fabric">
+								    	<a class="nav-button"><div class="icon" style="background-image: url(./imgs/icons/kevlar.png)"></div></a>
 								    </li>
-									<li class="left-menu store-persona" data-msg="Chewbacca" data-help="Altere o material dos seus assentos para pêlo de Chewbacca"  data-txt="#seat-fabric">
-								    	<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/chewbacca.png)"></div></a>
+									<li class="left-menu store-persona persona" data-msg="Chewbacca" data-help="Altere o material dos seus assentos para pêlo de Chewbacca"  data-txt="#seat-fabric">
+								    	<a class="nav-button"><div class="icon" style="background-image: url(./imgs/icons/chewbacca.png)"></div></a>
 								    </li>
-								    <li class="left-menu store-persona" data-msg="Couro" data-help="Altere o material dos seus assentos para couro"  data-txt="#seat-fabric">
-								    	<a class="nav-button" href="agree.html"><div class="icon" style="background-image: url(./imgs/icons/leather.png)"></div></a>
+								    <li class="left-menu store-persona persona" data-msg="Couro" data-help="Altere o material dos seus assentos para couro"  data-txt="#seat-fabric">
+								    	<a class="nav-button"><div class="icon" style="background-image: url(./imgs/icons/leather.png)"></div></a>
 								    </li>
 									<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="" style="opacity: 0; height: 0px">
 										<a id="bottom-elem"  class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
