--- a/Prot 1 func/video.html
+++ b/Prot 1 func/video.html
@@ -29,7 +29,7 @@
 		  		<div class="col-md-3">
 		  			<div class="row">
 		  				<div class="col-md-12 box" id="maintittle">
-		  					<h1 class= "width act maintext">Galeria</h1>
+		  					<h1 class= "width act maintext">Galeria<br> <small>Vídeo</small></h1>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer">
@@ -42,26 +42,23 @@
 		  					<div id="top-arrow" class="arrows"><span class="glyphicon glyphicon-chevron-up scrollicon"></span></div>
 		  					<div class="roll-scroll">
 							    <nav class="nav nav-pills nav-stacked nav-fixed-left nav-inverse text-center" role="navigation">
-							    	<li class="left-menu store" data-msg="Foto 1" data-help="Seleccionar imagem / vídeo para mais opções.<br>Data: 24/03/2230" data-txt="<img class='img' src='./imgs/cam/gal/pic1.jpg' style='margin:0'>">
-								      	<a class="nav-button" href="#"><div class="icon" style="background-image: url(./imgs/cam/gal/pic1.jpg)"></div></a>
+							    	<li id="play" class="left-menu usestore" data-msg="Reproduzir" data-help="Reproduzir o vídeo">
+								      	<a class="nav-button"><span class="mainicon glyphicon glyphicon-play"></span></a>
 								    </li>
-								  	<li class="left-menu store" data-msg="Foto 2" data-help="Seleccionar imagem / vídeo para mais opções.<br>Data: 23/02/2230" data-txt="<img class='img' src='./imgs/cam/gal/pic2.jpg' style='margin:0'>">
-								  		<a class="nav-button" href="#"><div class="icon" style="background-image: url(./imgs/cam/gal/pic2.jpg)"></div></a>
+								  	<li id="stop" class="left-menu usestore" data-msg="Parar" data-help="Parar a reprodução e voltar ao início">
+								  		<a class="nav-button"><span class="mainicon glyphicon glyphicon-stop"></span></a>
 								  	</li>
-								  	<li class="left-menu store" data-msg="Foto 3" data-help="Seleccionar imagem / vídeo para mais opções.<br>Data: 10/02/2230" data-txt="<img class='img' src='./imgs/cam/gal/pic3.jpg' style='margin:0'>">
-								  		<a class="nav-button" href="#"><div class="icon" style="background-image: url(./imgs/cam/gal/pic3.jpg)"></div></a>
+								  	<li class="left-menu usestore" data-msg="Partilhar" data-help="Partilhar o vídeo na nuvem Kitt">
+								  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-cloud"></span></a>
 								  	</li>
-								  	<li class="left-menu store" data-msg="Video 1" data-help="Seleccionar imagem / vídeo para mais opções.<br>Data: 10/02/2230" data-txt="<video id='video' style='height: 100%; width:90%;'><source src='./videos/kid.mp4' type='video/mp4'>Your browser does not support the video tag.</video>">
-								  		<a class="nav-button" href="video.html">
-									  		<div class="icon" style='background-image: url(./videos/thumbnail.jpg); opacity:0.6; display:inline-block; width: 50px'></div>
-									  		<span class="mainicon glyphicon glyphicon-play" style="display: inline-block; margin-left:-45px;"></span>
-								  		</a>
+								  	<li class="left-menu usestore" data-msg="Apagar" data-help="Apagar o vídeo da galeria">
+								  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-trash"></span></a>
 								  	</li>
-								  	<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="" style="opacity: 0; height: 0px">
+								  	<li class="left-menu usestore" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="" style="opacity: 0; height: 0">
 										<a id="bottom-elem" class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
 									</li>
 							    </nav>
-							</div>
+						    </div>
 							<div id="bottom-arrow" class="arrows"><span class="glyphicon glyphicon-chevron-down scrollicon"></span></div>
 						</div>
 						<div class="col-md-4 padding2 top-buffer20">
