--- a/Prot 1 func/logavaria.html
+++ b/Prot 1 func/logavaria.html
@@ -41,10 +41,10 @@
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
 						    	<li class="left-menu" data-msg="Pneu" data-help="Consulte a avaria e verifique a janela direita para mais informações" data-txt="<h4>Gravidade: <b>Grave</b></h4><p>Descrição: Pneu furado.</p><p>24/03/2230</p>">
-							    	<a class="nav-button" href="#"><div class="icon" style="background-image: url(./imgs/icons/roda.png)"></div></a>
+							    	<a class="nav-button"><div class="icon" style="background-image: url(./imgs/icons/roda.png)"></div></a>
 							    </li>
 						    	<li class="left-menu" data-msg="Motor a jacto" data-help="Consulte a avaria e verifique a janela direita para mais informações" data-txt="<h4>Gravidade: <b>Muito Grave</b></h4><p>Descrição: Motor inutilizável devido a entrada de uma ave para a turbina principal.</p><p>18/02/2230</p>">
-						    		<a class="nav-button" href="#"><div class="icon" style="background-image: url(./imgs/icons/jet.png)"></div></a>
+						    		<a class="nav-button"><div class="icon" style="background-image: url(./imgs/icons/jet.png)"></div></a>
 						    	</li >
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
 									<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
@@ -54,10 +54,10 @@
 						<div class="col-md-4 padding2">
 							<ul class="nav nav-pills nav-stacked nav-fixed-left text-left">
 								<li class="noact width">
-									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
+									<blockquote class=" side" style="height: 60px"></blockquote>
 								</li>
 								<li class="noact width">
-									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
+									<blockquote class=" side" style="height: 60px"></blockquote>
 								</li>
 								<li class="noact width">
 									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
