--- a/Prot 1 func/persona.html
+++ b/Prot 1 func/persona.html
@@ -30,7 +30,7 @@
 		  		<div class="col-md-3">
 		  			<div class="row">
 		  				<div class="col-md-12 box" id="maintittle">
-		  					<h1 class= "width act maintext">Personalização <small>Conforto</small></h1>
+		  					<h1 class= "width act maintext">Personalização</h1>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer">
@@ -52,14 +52,14 @@
 								    <li class="left-menu usestore-persona" data-msg="Performance" data-help="Personalize os vários constituintes relaccionados com a performance do seu veículo (motor, suspensão, direcção, etc.)" data-txt="">
 								    	<a class="nav-button" href="performance.html"><div class="icon" style="background-image: url(./imgs/icons/performance2.png)"></div></a>
 								    </li>
-								    <li class="left-menu usestore-persona" data-msg="Guardar alterações" data-help="Guardar as alterações até agora efectuadas no seu carro" data-txt="Cenas até agora alteradas">
-							    		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-floppy-disk"></span></a>
+								    <li class="left-menu usestore-persona" data-msg="Guardar alterações" data-help="Guardar as alterações até agora efectuadas no seu carro" data-confirm="Guardar alterações?">
+							    		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-floppy-disk"></span></a>
 							    	</li >
-							    	<li class="left-menu usestore-persona" data-msg="Descartar alterações" data-help="Descartar as alterações até agora efectuadas no seu carro" data-txt="Cenas até agora alteradas" style="opacity: 0; height: 0px">
-							    		<a id="bottom-elem" class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-trash"></span></a>
+							    	<li id="pre" class="left-menu usestore-persona" data-msg="Descartar alterações" data-help="Descartar as alterações até agora efectuadas no seu carro" data-confirm="Descartar alterações?" style="opacity: 0; height: 0px">
+							    		<a id="bottom-elem" class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-trash"></span></a>
 							    	</li >
-							    	<li class="left-menu usestore-persona" data-msg="Definições de fábrica" data-help="Restaurar os vários constituintes activos por defeito" data-txt="Definições de fábrica" style="opacity: 0; height: 0px">
-							    		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-repeat"></span></a>
+							    	<li id="factory" class="left-menu usestore-persona" data-msg="Definições de fábrica" data-help="Restaurar os vários constituintes activos por defeito" data-confirm="Restaurar definições de fábrica?" style="opacity: 0; height: 0px">
+							    		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-repeat"></span></a>
 							    	</li >
 									<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="" style="opacity: 0; height: 0px">
 										<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
