--- a/Prot 1 func/recebida.html
+++ b/Prot 1 func/recebida.html
@@ -43,13 +43,13 @@
 						    	<li class="left-menu usestore" data-msg="Responder" data-help="Responder a esta mensagem usando uma das resposta pré-definidas">
 									<a class="nav-button" href="resposta.html"><span class="mainicon glyphicon glyphicon-upload"></span></a>
 								</li>
-						   		<li class="left-menu usestore" data-msg="Marcar como por ler" data-help="Marcar a mensagem recebida como por ler">
+						   		<li class="left-menu usestore" data-msg="Marcar como /"por ler/"" data-help="Marcar a mensagem recebida como por ler" data-confirm="Marcar como /"por ler/"?">
 							    	<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-align-justify"></span></a>
 							    </li>
-								<li class="left-menu usestore" data-msg="Marcar como lida" data-help="Marcar a mensagem recebida como lida">
+								<li class="left-menu usestore" data-msg="Marcar como /"lida/"" data-help="Marcar a mensagem recebida como lida" data-confirm="Marcar como /"lida/"?">
 									<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-check"></span></a>
 								</li>
-								<li class="left-menu usestore" data-msg="Apagar" data-help="Apagar a mensagem da caixa de entrada">
+								<li class="left-menu usestore" data-msg="Apagar" data-help="Apagar a mensagem da caixa de entrada" data-confirm="Apagar a mensagem?">
 									<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-trash"></span></a>
 								</li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
